# ytm-indicator

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
config/: pear-notray.hook  ytm-indicator.service
scripts/: patch-pear-notray.sh
ytm_indicator/: __init__.py  __main__.py  art.py  cli.py  menu.py  pear_api.py  popover.py  sni.py  state.py
