[project]
name = "ytm-indicator"
version = "0.1.0"
description = "Standalone StatusNotifierItem tray control for Pear Desktop (YouTube Music)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Unlicense" }
authors = [{ name = "Beryndil", email = "dwhennigan@gmail.com" }]

dependencies = [
    "dbus-fast>=2.24.0",
    "aiohttp>=3.10.0",
    "Pillow>=10.3.0",
]

[project.scripts]
ytm-indicator = "ytm_indicator.cli:main"

[project.urls]
Homepage = "https://github.com/Beryndil/ytm-indicator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ytm_indicator"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

# D-Bus service classes have to speak D-Bus conventions:
#   - method/signal/property names are CamelCase (N802)
#   - `id` is a legitimate parameter name per the DBusMenu spec (A002)
#   - type annotations are D-Bus type signatures as quoted strings, not
#     Python types — `UP037` wants to strip the quotes, and ruff reads
#     `"s"` / `"i"` as undefined forward references (F821, F722).
[tool.ruff.lint.per-file-ignores]
"ytm_indicator/sni.py" = ["N802", "A002", "F821", "F722", "UP037"]

[tool.mypy]
strict = true
python_version = "3.12"
